Fix the StartupManager to update the scheduling configuration